--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,10 @@ Thumbs.db
 # galpy #
 #########
 galpy/df_src/data/dfcorrection*.sav
+
+
+# Build directories #
+#####################
+build/
+dist/
+galpy.egg-info/
