--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ python:
 virtualenv:
   system_site_packages: true
 before_install:
- - sudo apt-get install -qq python-numpy python-scipy
+ - sudo apt-get install -qq python-numpy python-scipy python-matplotlib
  - sudo apt-get install libgsl0 libgsl0-dev
 # command to install dependencies
 install:
