--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ virtualenv:
   system_site_packages: true
 before_install:
  - sudo apt-get install -qq python-numpy python-scipy python-matplotlib
- - sudo apt-get install libgsl0 libgsl0-dev
+ - sudo apt-get install libgsl0-dev
 # command to install dependencies
 install:
  - python setup.py -q install
