--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ python:
 virtualenv:
   system_site_packages: true
 before_install:
+ - sudo apt-get install libgsl0-dev libatlas-dev
  - sudo apt-get install -qq python-numpy python-scipy python-matplotlib
- - sudo apt-get install libgsl0-dev libatlas-dev libatlas3-base-dev
 # command to install dependencies
 install:
  - python setup.py -q install
