--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,12 @@
 language: python
 python:
-  - "2.6"
   - "2.7"
-  - "3.2"
-  - "3.3"
 virtualenv:
   system_site_packages: true
 before_install:
- - sudo apt-get install libgsl0-dev libatlas-dev
+ - sudo apt-get install libgsl0-dev
  - sudo apt-get install -qq python-numpy python-scipy python-matplotlib
 # command to install dependencies
 install:
- - python setup.py -q install
+ - python setup.py install
 script: true
