--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,9 @@ before_install:
 install:
  - python setup.py install
 script: true
+notifications:
+  email:
+    recipients:
+      - jo.bovy@gmail.com
+    on_success: change
+    on_failure: change
