add nose tests of import, closes #104

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,8 @@ before_install:
 # command to install dependencies
 install:
  - python setup.py install
-script: true
+script:
+ - nosetests -v -w nose/
 notifications:
   email:
     recipients:
