--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,7 @@ virtualenv:
   system_site_packages: true
 before_install:
  - sudo apt-get install libgsl0-dev
- - sudo apt-get install -qq python-numpy python-matplotlib
- - pip install scipy
+ - sudo apt-get install -qq python-numpy python-scipy python-matplotlib
 # command to install dependencies
 install:
  - python setup.py install
