--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,7 @@
-include README.rst README.dev LICENSE HISTORY.txt AUTHORS.txt
+include README.md README.dev LICENSE HISTORY.txt AUTHORS.txt
+include galpy/df_src/data/*.sav
+include galpy/actionAngle_src/actionAngle_c_ext/*.h
+include galpy/orbit_src/orbit_c_ext/*.h
+include galpy/potential_src/potential_c_ext/*.h
+include galpy/util/*.h
+include galpy/util/interp_2d/*.h
