try installing a more recent version of numpy

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,10 @@ virtualenv:
   system_site_packages: true
 before_install:
  - sudo apt-get install libgsl0-dev
- - sudo apt-get install -qq python-numpy python-scipy python-matplotlib
+ - sudo apt-get install -qq python-scipy python-matplotlib
 # command to install dependencies
 install:
+ - pip install --upgrade numpy
  - python setup.py install
 script:
  - nosetests -v -w nose/
