--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
-language: python
-python:
-  - "2.7"
+language: c
+#language: python
+#python:
+#  - "2.7"
+compiler:
+  - clang
+  - gcc
 virtualenv:
   system_site_packages: true
 before_install:
