--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,12 @@ before_install:
  - sudo apt-get install -qq python-numpy python-scipy python-matplotlib
 # command to install dependencies
 install:
+ - pip install coveralls
  - python setup.py install
 script:
- - nosetests -v -w nose/
+ - nosetests -v -w nose/ --with-coverage
+after_sucess:
+ coveralls
 notifications:
   email:
     recipients:
