--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
  - pip install coveralls
  - python setup.py install
 script:
- - nosetests -v -w nose/ --with-coverage
+ - nosetests -v -w nose/ --with-coverage --cover-package=galpy
 after_sucess:
  coveralls
 notifications:
