--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,11 @@ before_install:
 # command to install dependencies
 install:
  - pip install coveralls
+ - pip install coverage
  - python setup.py install
 script:
- - nosetests -v -w nose/ --with-coverage --cover-package=galpy
+ - coverage nosetests -v -w nose/
+# - nosetests -v -w nose/ --with-coverage --cover-package=galpy
 after_sucess:
  coveralls
 notifications:
