--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
  - pip install coverage
  - python setup.py install
 script:
- - coverage nosetests -v -w nose/
+ - coverage run nosetests -v -w nose/
 # - nosetests -v -w nose/ --with-coverage --cover-package=galpy
 after_sucess:
  coveralls
