--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
 # command to install dependencies
 install:
  - pip install coveralls
- - pip install coverage
+ - pip install nose-cov
  - python setup.py install
 script:
  - nosetests -v -w nose/ --with-cov --cov .
