--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,10 @@ before_install:
 # command to install dependencies
 install:
  - pip install coveralls
- - pip install nose-cov
  - python setup.py install
 script:
- - nosetests -v -w nose/ --with-cov --cov .
+ - coverage run --source=/home/travis/virtualenv/python2.7_with_system_site_packages/lib/python2.7/site-packages/galpy-0.1-py2.7-linux-x86_64.egg/galpy /usr/local/bin/nosetests -v nose/
+# - nosetests -v -w nose/
 after_sucess:
  coveralls
 notifications:
