--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: python
 python:
   - "2.7"
+env:
+  - CC= gcc
+  - CC= clang
 virtualenv:
   system_site_packages: true
 before_install:
@@ -10,7 +13,7 @@ before_install:
 install:
  - pip install coveralls
  - pip install nose-cov
- - python setup.py develop
+ - python setup.py develop -c $CC
 script:
  - nosetests -v -w nose/ --with-cov --cov galpy
 after_success:
