--- a/.travis.yml
+++ b/.travis.yml
@@ -13,13 +13,13 @@ before_install:
 install:
  - pip install coveralls
  - pip install nose-cov
- - python setup.py develop --coverage
+ - python setup.py develop #--coverage
 script:
  - nosetests -v -w nose/ --with-cov --cov galpy
 after_success:
  - coveralls
- - pip install cpp-coveralls # Also install for C
- - coveralls
+# - pip install cpp-coveralls # Also install for C
+# - coveralls
 notifications:
   email:
     recipients:
