--- a/.travis.yml
+++ b/.travis.yml
@@ -11,16 +11,16 @@ before_install:
  - sudo apt-get install -qq python-numpy python-scipy python-matplotlib
 # command to install dependencies
 install:
+ - pip install cpp-coveralls
  - pip install coveralls
- - pip install -U cpp-coveralls
  - pip install nose-cov
  - python setup.py develop --coverage
 script:
  - nosetests -v -w nose/ --with-cov --cov galpy
 after_success:
- - coveralls
-# - pip install cpp-coveralls # Also install for C
- - cpp-coveralls
+ - if [[ $CC == 'clang' ]]; then cpp-coveralls ; else coveralls ; fi
+# - coveralls
+# - cpp-coveralls
 notifications:
   email:
     recipients:
