--- a/.travis.yml
+++ b/.travis.yml
@@ -11,14 +11,13 @@ before_install:
  - sudo apt-get install -qq python-numpy python-scipy python-matplotlib
 # command to install dependencies
 install:
- - pip install cpp-coveralls
  - pip install coveralls
  - pip install nose-cov
  - python setup.py develop --coverage
 script:
  - nosetests -v -w nose/ --with-cov --cov galpy
 after_success:
- - if [[ $CC == 'clang' ]]; then cpp-coveralls ; else coveralls ; fi
+ - ./.submit_coveralls.sh
 # - coveralls
 # - cpp-coveralls
 notifications:
