--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
   - "2.7"
 env:
   - CC=gcc
-  - CC=clang
+  - CC=clang LDSHARED=clang
 virtualenv:
   system_site_packages: true
 before_install:
