exclude snapshot code from coverage

--- a/.coveragerc
+++ b/.coveragerc
@@ -12,6 +12,10 @@ exclude_lines =
     if 0:
     if __name__ == .__main__.:
 
+omit = 
+    galpy/snapshot_src*
+    galpy/snapshot.py
+
 ignore_errors = True
 
 [html]
