--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
  - pip install nose-cov
  - python setup.py develop
 script:
- - nosetests -v -w nose/ --with-cov --cov galpy
+ - nosetests -v -w nose/ --with-cov --cov galpy --cov-config .coveragerc_travis
 after_success:
  - coveralls
 notifications:
