--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ virtualenv:
 before_install:
  - sudo apt-get install libgsl0-dev
  - pip uninstall -y numpy #uninstall numpy from virtualenv
- - pip install git+git://github.com/numpy/numpy.git#egg=numpy
+ - pip install numpy>=1.7
  - sudo apt-get install -qq python-scipy python-matplotlib
  - export DISPLAY=:99.0 #For plotting tests, courtesy Ryan Varley
  - sh -e /etc/init.d/xvfb start $For plotting tests
