--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,9 @@ virtualenv:
 before_install:
  - sudo apt-get install libgsl0-dev
  - pip uninstall -y numpy #uninstall numpy from virtualenv
- - pip install numpy>=1.7
  - sudo apt-get install -qq python-scipy python-matplotlib
+ - apt-get purge python-numpy #because this is 1.6.1
+ - pip install numpy>=1.7
  - export DISPLAY=:99.0 #For plotting tests, courtesy Ryan Varley
  - sh -e /etc/init.d/xvfb start $For plotting tests
 # command to install dependencies
