--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ script:
  - nosetests -v -w nose/ --with-cov --cov galpy --cov-config .coveragerc_travis
 after_success:
  # Generate lcov output 
- - ls
+ - ls build
  - lcov --capture --directory build/temp.linux-x86_64-2.7/galpy/ --output-file coverage.info
  # combine, generate json, and upload
  - coveralls-lcov -v -n coverage.info > coverage.c.json
