--- a/.travis.yml
+++ b/.travis.yml
@@ -15,10 +15,10 @@ virtualenv:
 before_install:
  - sudo apt-get install libgsl0-dev
  - sudo apt-get -qq install lcov
- - pip uninstall -y numpy #uninstall numpy from virtualenv
+# - pip uninstall -y numpy #uninstall numpy from virtualenv
  - sudo apt-get install -qq python-scipy python-matplotlib
- - sudo dpkg -r --force-depends python-numpy #because this is 1.6.1
- - pip install numpy>=1.7
+# - sudo dpkg -r --force-depends python-numpy #because this is 1.6.1
+# - pip install numpy>=1.7
  - export DISPLAY=:99.0 #For plotting tests, courtesy Ryan Varley
  - sh -e /etc/init.d/xvfb start $For plotting tests
 # command to install dependencies
