don't build other extensions

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ install:
  - pip install coveralls-merge
  - "gem install coveralls-lcov"
  - python setup.py build_ext --coverage --single_ext --inplace
- - python setup.py develop
+ - python setup.py develop --single_ext
 script:
  - nosetests -v -w nose/ --with-cov --cov galpy --cov-config .coveragerc_travis
 after_success:
