--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,7 @@ script:
 after_success:
  # Generate lcov output 
  - ls build
+ - ls build/temp.linux-x86_64-2.7/galpy/potential_src/potential_c_ext/
  - lcov --capture --directory build/temp.linux-x86_64-2.7/galpy/ --output-file coverage.info
  # combine, generate json, and upload
  - coveralls-lcov -v -n coverage.info > coverage.c.json
