try fixing requests

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ before_install:
  - sudo apt-get install libgsl0-dev
  - sudo apt-get -qq install lcov
 # - pip uninstall -y numpy #uninstall numpy from virtualenv
+# - pip uninstall -y requests #uninstall requests from virtualenv
  - sudo apt-get install -qq python-scipy python-matplotlib
 # - sudo dpkg -r --force-depends python-numpy #because this is 1.6.1
 # - pip install numpy>=1.7
@@ -25,7 +26,7 @@ before_install:
 install:
  - pip install coveralls
  - pip install nose-cov
- - pip install -U requests
+ - pip install requests>=2.0.0
  - pip install git+git://github.com/wiredfool/coveralls-merge.git#egg=coveralls-merge
  - gem install coveralls-lcov
  - python setup.py build_ext --coverage --single_ext --inplace
