--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_install:
  - sudo apt-get install libgsl0-dev
  - sudo apt-get -qq install lcov
 # - pip uninstall -y numpy #uninstall numpy from virtualenv
-# - pip uninstall -y requests #uninstall requests from virtualenv
+ - pip uninstall -y requests #uninstall requests from virtualenv
  - sudo apt-get install -qq python-scipy python-matplotlib
 # - sudo dpkg -r --force-depends python-numpy #because this is 1.6.1
 # - pip install numpy>=1.7
