try to deal with initial file better

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ install:
  - easy_install --upgrade coveralls
  - python setup.py build_ext --coverage --single_ext --inplace
  - python setup.py develop --single_ext
- - lcov --capture --base-directory . --directory build/temp.linux-x86_64-2.7/galpy/ --output-file coverage.info --initial
+ - lcov --capture --base-directory . --directory build/temp.linux-x86_64-2.7/galpy/ --output-file coverage_initial.info --initial
 script:
  - nosetests -v -w nose/ --with-cov --cov galpy --cov-config .coveragerc_travis
 after_success:
@@ -38,6 +38,8 @@ after_success:
  - ls build
  - ls build/temp.linux-x86_64-2.7/galpy/potential_src/potential_c_ext/
  - lcov --capture --base-directory . --directory build/temp.linux-x86_64-2.7/galpy/ --output-file coverage.info
+ - lcov --add-tracefile coverage_orbit.info --output-file dummy.info
+- if [ "$?" -ne "0" ]; then cp coverage_orbit_initial.info coverage_orbit.info; fi
  # combine, generate json, and upload
  - coveralls-lcov -v -n coverage.info > coverage.c.json
  - coveralls-merge coverage.c.json
