further split travis tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,12 @@ python:
 #env: #Doesn't seem to work terribly well
 #  - CC=gcc
 #  - CC=clang LDSHARED=clang
-env: #split tests into two
-   - NOSE_IGNORE_FILES='test_qdf.py|test_diskdf.py|test_orbit.py'
+env: #split tests
+   - NOSE_IGNORE_FILES='test_qdf.py|test_diskdf.py|test_orbit.py|test_streamdf.py'
    - NOSE_IGNORE_FILES='^((?!test_orbit).)*$'
    - NOSE_IGNORE_FILES='^((?!test_diskdf).)*$'
    - NOSE_IGNORE_FILES='^((?!test_qdf).)*$'
+   - NOSE_IGNORE_FILES='^((?!test_streamdf).)*$'
 virtualenv:
   system_site_packages: true
 before_install:
