--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,12 @@ python:
 #  - CC=gcc
 #  - CC=clang LDSHARED=clang
 env: #split tests
-   - NOSE_IGNORE_FILES='test_qdf.py|test_diskdf.py|test_orbit.py|test_streamdf.py'
+   - NOSE_IGNORE_FILES='test_qdf|test_diskdf|test_orbit|test_streamdf|test_evolveddiskdf'
    - NOSE_IGNORE_FILES='^((?!test_orbit).)*$'
    - NOSE_IGNORE_FILES='^((?!test_diskdf).)*$'
    - NOSE_IGNORE_FILES='^((?!test_qdf).)*$'
    - NOSE_IGNORE_FILES='^((?!test_streamdf).)*$'
+   - NOSE_IGNORE_FILES='^((?!test_evolveddiskdf).)*$'
 virtualenv:
   system_site_packages: true
 before_install:
