--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,11 @@ python:
 #  - CC=gcc
 #  - CC=clang LDSHARED=clang
 env: #split tests
-   - NOSE_IGNORE_FILES='test_qdf|test_diskdf|test_orbit|test_streamdf|test_evolveddiskdf'
+   - NOSE_IGNORE_FILES='test_qdf|test_pv2qdf|test_diskdf|test_orbit|test_streamdf|test_evolveddiskdf'
    - NOSE_IGNORE_FILES='^((?!test_orbit).)*$'
    - NOSE_IGNORE_FILES='^((?!test_diskdf).)*$'
    - NOSE_IGNORE_FILES='^((?!test_qdf).)*$'
+   - NOSE_IGNORE_FILES='^((?!test_pv2qdf).)*$'
    - NOSE_IGNORE_FILES='^((?!test_streamdf).)*$'
    - NOSE_IGNORE_FILES='^((?!test_evolveddiskdf).)*$'
 virtualenv:
