download the pre-calculated corrections

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,9 @@ before_install:
 # - sudo apt-get install -qq python-matplotlib
  - export DISPLAY=:99.0 #For plotting tests, courtesy Ryan Varley
  - sh -e /etc/init.d/xvfb start $For plotting tests
+#Download corrections for some tests
+ - wget http://github.com/downloads/jobovy/galpy/galpy-dfcorrections.tar.gz
+ - tar xvzf galpy-dfcorrections.tar.gz -C ./galpy/df_src/data/
 # command to install dependencies
 install:
  - pip install nose-cov
