--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,12 @@ python:
 #  - CC=clang LDSHARED=clang
 env: #split tests
    - NOSE_IGNORE_FILES='test_qdf|test_pv2qdf|test_diskdf|test_orbit|test_streamdf|test_evolveddiskdf'
-   - NOSE_IGNORE_FILES='^((?!test_orbit).)*$'
-   - NOSE_IGNORE_FILES='^((?!test_diskdf).)*$'
-   - NOSE_IGNORE_FILES='^((?!test_qdf).)*$'
-   - NOSE_IGNORE_FILES='^((?!test_pv2qdf).)*$'
-   - NOSE_IGNORE_FILES='^((?!test_streamdf).)*$'
-   - NOSE_IGNORE_FILES='^((?!test_evolveddiskdf).)*$'
+#   - NOSE_IGNORE_FILES='^((?!test_orbit).)*$'
+#   - NOSE_IGNORE_FILES='^((?!test_diskdf).)*$'
+#   - NOSE_IGNORE_FILES='^((?!test_qdf).)*$'
+#   - NOSE_IGNORE_FILES='^((?!test_pv2qdf).)*$'
+#   - NOSE_IGNORE_FILES='^((?!test_streamdf).)*$'
+#   - NOSE_IGNORE_FILES='^((?!test_evolveddiskdf).)*$'
 virtualenv:
   system_site_packages: true
 before_install:
@@ -48,7 +48,7 @@ install:
  - python setup.py build_ext --coverage --single_ext --inplace
  - python setup.py develop --single_ext
 script:
- - nosetests -v -w nose/ --with-cov --cov galpy --cov-config .coveragerc_travis
+ - nosetests -v -w nose/ --with-cov --cov galpy --cov-config .coveragerc_travis -x
 after_success:
  # Generate lcov output 
  - lcov --capture --base-directory . --directory build/temp.linux-x86_64-2.7/galpy/ --output-file coverage.info
