--- a/.travis.yml
+++ b/.travis.yml
@@ -45,7 +45,7 @@ install:
  - gem install coveralls-lcov
  - easy_install --upgrade requests
  - easy_install --upgrade coveralls
- - pip install --allow-all-external --allow-unverified pynbody
+ - pip install --allow-all-external --allow-unverified pynbody pynbody
  - python setup.py build_ext --coverage --single_ext --inplace
  - python setup.py develop --single_ext
 script:
