--- a/.travis.yml
+++ b/.travis.yml
@@ -48,7 +48,7 @@ install:
  - gem install coveralls-lcov
  - easy_install --upgrade requests
  - easy_install --upgrade coveralls
- - if [[ $REQUIRES_PYNBODY ]]; then pip install git+git://github.com/pynbody/pynbody.git; fi
+ - if $REQUIRES_PYNBODY; then pip install git+git://github.com/pynbody/pynbody.git; fi
  - python setup.py build_ext --coverage --single_ext --inplace
  - python setup.py develop --single_ext
 script:
