--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ env: #split tests
     - REQUIRES_PYNBODY=false
   matrix:
     - NOSE_IGNORE_FILES='test_qdf|test_pv2qdf|test_diskdf|test_orbit|test_streamdf|test_evolveddiskdf' REQUIRES_PYNBODY=true
-    - NOSE_IGNORE_FILES='^((?!test_orbit).)*$'
+    - NOSE_IGNORE_FILES='^((?!test_orbit).)*$' REQUIRES_PYNBODY=true
     - NOSE_IGNORE_FILES='^((?!test_diskdf).)*$'
     - NOSE_IGNORE_FILES='^((?!test_qdf).)*$'
     - NOSE_IGNORE_FILES='^((?!test_pv2qdf).)*$'
