--- a/.travis.yml
+++ b/.travis.yml
@@ -48,7 +48,7 @@ install:
  - python setup.py build_ext --coverage --single_ext --inplace
  - python setup.py develop --single_ext
 script:
- - nosetests -v -w nose/ --with-cov --cov galpy --cov-config .coveragerc_travis
+ - nosetests -v -w nose/ --with-cov --cov galpy --cov-config .coveragerc_travis --ignore-files=test_nemo
 after_success:
  # Generate lcov output 
  - lcov --capture --base-directory . --directory build/temp.linux-x86_64-2.7/galpy/ --output-file coverage.info
