--- a/.travis.yml
+++ b/.travis.yml
@@ -48,8 +48,8 @@ after_success:
  # Generate lcov output 
  - lcov --capture --base-directory . --directory build/temp.linux-x86_64-2.7/galpy/ --output-file coverage.info
  # combine, generate json, and upload
- - coveralls-lcov -v -n coverage.info > coverage.c.json
- - if [[ $TRAVIS_PYTHON_VERSION == '2.7' ]]; then coveralls-merge coverage.c.json; fi
+# - coveralls-lcov -v -n coverage.info > coverage.c.json
+# - if [[ $TRAVIS_PYTHON_VERSION == '2.7' ]]; then coveralls-merge coverage.c.json; fi
  - if [[ $TRAVIS_PYTHON_VERSION == '2.7' ]]; then bash <(curl -s https://codecov.io/bash) -v; fi
 notifications:
   email:
