--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,6 @@ before_install:
 # command to install dependencies
 install:
  - pip install nose-cov
- - pip install coveralls-merge
  - gem install coveralls-lcov
  - easy_install --upgrade requests
  - easy_install --upgrade coveralls
@@ -50,12 +49,8 @@ install:
 script:
  - nosetests -v -w nose/ --with-cov --cov galpy --cov-config .coveragerc_travis
 after_success:
- # Generate lcov output 
  - lcov --capture --base-directory . --directory build/temp.linux-x86_64-2.7/galpy/ --output-file coverage.info
- # combine, generate json, and upload
- - coveralls-lcov -v -n coverage.info > coverage.c.json
- - coveralls-merge coverage.c.json
-# - coveralls
+ - bash <(curl -s https://codecov.io/bash)
 notifications:
   email:
     recipients:
