--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,7 @@ after_success:
  # Generate lcov output 
  - lcov --capture --base-directory . --directory build/temp.linux-x86_64-2.7/galpy/ --output-file coverage.info
  # Codecov
- - codecov
+ - if [[ $TRAVIS_PYTHON_VERSION == '2.7' ]]; then codecov; fi
  - if [[ $TRAVIS_PYTHON_VERSION == '2.7' ]]; then bash <(curl -s https://codecov.io/bash) -v; fi
  # coveralls: combine, generate json, and upload
  - coveralls-lcov -v -n coverage.info > coverage.c.json
