--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+sudo: false
 language: python
 python:
   - "2.7"
@@ -14,10 +15,12 @@ env: #split tests
     - NOSE_IGNORE_FILES='^((?!test_qdf).)*$'
     - NOSE_IGNORE_FILES='^((?!test_pv2qdf).)*$'
     - NOSE_IGNORE_FILES='^((?!test_streamdf).)*$'
+addons:
+  apt:
+    packages:
+    - libgsl0-dev
+    - lcov
 before_install:
- - sudo apt-get update
- - sudo apt-get install libgsl0-dev
- - sudo apt-get -qq install lcov
  #Setup conda for faster installs
  - wget http://repo.continuum.io/miniconda/Miniconda-3.7.3-Linux-x86_64.sh -O miniconda.sh
  - bash miniconda.sh -b -p $HOME/miniconda
