--- a/.travis.yml
+++ b/.travis.yml
@@ -48,11 +48,7 @@ install:
  - easy_install --upgrade requests
  - easy_install --upgrade coveralls
  - pip install codecov
- #- if $REQUIRES_PYNBODY; then pip install git+git://github.com/pynbody/pynbody.git; fi
- - if $REQUIRES_PYNBODY; then git clone https://github.com/pynbody/pynbody.git; fi
- - if $REQUIRES_PYNBODY; then cd pynbody; fi
- - if $REQUIRES_PYNBODY; then python setup.py install; fi
- - if $REQUIRES_PYNBODY; then cd ..; fi
+ - if $REQUIRES_PYNBODY; then pip install git+git://github.com/pynbody/pynbody.git@cda64c8ac9fa59b83663b155d14d184eb33826a5; fi
  - python setup.py build_ext --coverage --single_ext --inplace
  - python setup.py develop --single_ext
 script:
