--- a/.travis.yml
+++ b/.travis.yml
@@ -18,14 +18,14 @@ addons:
   apt:
     packages:
     - libgsl0-dev
-    - lcov # leave for when they approve its use
+#    - lcov # leave for when they approve its use
 before_install:
  # Install lcov
- #- wget http://ftp.de.debian.org/debian/pool/main/l/lcov/lcov_1.11.orig.tar.gz
- #- tar xf lcov_1.11.orig.tar.gz
- #- mkdir $HOME/usr
- #- export PATH=$PATH:$HOME/usr/bin
- #- make -C lcov-1.11/ install PREFIX=$HOME
+ - wget http://ftp.de.debian.org/debian/pool/main/l/lcov/lcov_1.11.orig.tar.gz
+ - tar xf lcov_1.11.orig.tar.gz
+ - mkdir $HOME/usr
+ - export PATH=$PATH:$HOME/usr/bin
+ - make -C lcov-1.11/ install PREFIX=$HOME
  #Setup conda for faster installs
  - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
  - bash miniconda.sh -b -p $HOME/miniconda
