--- a/.travis.yml
+++ b/.travis.yml
@@ -48,8 +48,7 @@ install:
  - easy_install --upgrade requests
  - easy_install --upgrade coveralls
  - pip install codecov
-#cda64c8ac9fa59b83663b155d14d184eb33826a5
- - if $REQUIRES_PYNBODY; then pip install git+git://github.com/pynbody/pynbody.git@60485bbf1ff77a3834b06091df04abb384fdc797; fi
+ - if $REQUIRES_PYNBODY; then pip install git+git://github.com/pynbody/pynbody.git; fi
  - python setup.py build_ext --coverage --single_ext --inplace
  - python setup.py develop --single_ext
 script:
