--- a/.travis.yml
+++ b/.travis.yml
@@ -49,6 +49,11 @@ install:
  - easy_install --upgrade coveralls
  - pip install codecov
  - if $REQUIRES_PYNBODY; then pip install git+git://github.com/pynbody/pynbody.git; fi
+ # clone my version of the torus code
+ - git clone git@github.com:jobovy/Torus.git galpy/actionAngle_src/actionAngleTorus_c_ext/torus
+ - cd galpy/actionAngle_src/actionAngleTorus_c_ext/torus
+ - git checkout galpy
+ - cd -
  - python setup.py build_ext --coverage --single_ext --inplace
  - python setup.py develop --single_ext
 script:
