--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,10 @@ python:
 #  - "3.3"
 env: #split tests
   global:
-    - REQUIRES_PYNBODY=false
+    - REQUIRES_PYNBODY=false # also installs astropy
   matrix:
-    - NOSE_IGNORE_FILES='test_qdf|test_pv2qdf|test_diskdf|test_orbit|test_streamdf|test_streamgapdf|test_evolveddiskdf|test_nemo' REQUIRES_PYNBODY=true
-    - NOSE_IGNORE_FILES='^((?!test_orbit).)*$' REQUIRES_PYNBODY=true
+    - NOSE_IGNORE_FILES='test_qdf|test_pv2qdf|test_diskdf|test_orbit|test_streamdf|test_streamgapdf|test_evolveddiskdf|test_quantity|test_nemo' REQUIRES_PYNBODY=true
+    - NOSE_IGNORE_FILES='^((?!test_orbit|test_quantity).)*$' REQUIRES_PYNBODY=true
     - NOSE_IGNORE_FILES='^((?!test_evolveddiskdf).)*$'
     - NOSE_IGNORE_FILES='^((?!test_diskdf).)*$'
     - NOSE_IGNORE_FILES='^((?!(test_qdf|test_pv2qdf|test_streamgapdf)).)*$'
