--- a/.travis.yml
+++ b/.travis.yml
@@ -19,15 +19,26 @@ env: #split tests
 addons:
   apt:
     packages:
-    - libgsl0-dev
+     - libgsl0-dev
 #    - lcov # leave for when they approve its use
 before_install:
  # Install lcov
  - wget http://ftp.de.debian.org/debian/pool/main/l/lcov/lcov_1.11.orig.tar.gz
  - tar xf lcov_1.11.orig.tar.gz
  - mkdir $HOME/usr
- - export PATH=$PATH:$HOME/usr/bin
+ - export PATH=$HOME/usr/bin:$PATH
  - make -C lcov-1.11/ install PREFIX=$HOME
+# Install GSLv2
+ - if [[ $TRAVIS_PYTHON_VERSION == 3.4 ]]; then wget ftp://ftp.gnu.org/gnu/gsl/gsl-2.2.tar.gz; fi
+ - if [[ $TRAVIS_PYTHON_VERSION == 3.4 ]]; then tar xf gsl-2.2.tar.gz; fi
+ - if [[ $TRAVIS_PYTHON_VERSION == 3.4 ]]; then cd gsl-2.2; fi
+ - if [[ $TRAVIS_PYTHON_VERSION == 3.4 ]]; then ./configure --prefix=$HOME/usr; fi
+ - if [[ $TRAVIS_PYTHON_VERSION == 3.4 ]]; then make; fi
+ - if [[ $TRAVIS_PYTHON_VERSION == 3.4 ]]; then make install; fi
+ - if [[ $TRAVIS_PYTHON_VERSION == 3.4 ]]; then cd -; fi
+ - if [[ $TRAVIS_PYTHON_VERSION == 3.4 ]]; then export CFLAGS=-I$HOME/usr/include; fi
+ - if [[ $TRAVIS_PYTHON_VERSION == 3.4 ]]; then export LDFLAGS=-L$HOME/usr/lib; fi
+ - if [[ $TRAVIS_PYTHON_VERSION == 3.4 ]]; then export LD_LIBRARY_PATH=$HOME/usr/lib; fi
  #Setup conda for faster installs
  - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
  - bash miniconda.sh -b -p $HOME/miniconda
@@ -67,10 +78,10 @@ after_success:
  - lcov --capture --base-directory . --directory build/temp.linux-x86_64-2.7/galpy/ --no-external --output-file coverage_full.info
  - lcov --remove coverage_full.info 'galpy/actionAngle_src/actionAngleTorus_c_ext/torus/*' -o coverage.info
  # Codecov
- - if [[ $TRAVIS_PYTHON_VERSION == '2.7' ]]; then bash <(curl -s https://codecov.io/bash) -v; fi
+ - bash <(curl -s https://codecov.io/bash)
  # coveralls: combine, generate json, and upload
  - coveralls-lcov -v -n coverage.info > coverage.c.json
- - if [[ $TRAVIS_PYTHON_VERSION == '2.7' ]]; then coveralls-merge coverage.c.json; fi
+ - coveralls-merge coverage.c.json
 notifications:
   email:
     recipients:
