--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ env: #split tests
     - REQUIRES_PYNBODY=false
     - REQUIRES_ASTROPY=false
   matrix:
-    - TEST_FILES='tests/ --ignore=test_qdf.py --ignore=test_pv2qdf.py --ignore=test_diskdf.py --ignore=test_orbit.py --ignore=test_streamdf.py --ignore=test_streamgapdf.py --ignore=test_evolveddiskdf.py --ignore=test_quantity.py --ignore=test_nemo.py --ignore=test_coords.py' REQUIRES_PYNBODY=true
-    - TEST_FILES=' tests/test_quantity.py tests/test_coords.py)' REQUIRES_ASTROPY=true # needs to be separate for different config
+    - TEST_FILES='tests/ --ignore=tests/test_qdf.py --ignore=tests/test_pv2qdf.py --ignore=tests/test_diskdf.py --ignore=tests/test_orbit.py --ignore=tests/test_streamdf.py --ignore=tests/test_streamgapdf.py --ignore=tests/test_evolveddiskdf.py --ignore=tests/test_quantity.py --ignore=tests/test_nemo.py --ignore=tests/test_coords.py' REQUIRES_PYNBODY=true
+    - TEST_FILES='tests/test_quantity.py tests/test_coords.py' REQUIRES_ASTROPY=true # needs to be separate for different config
     - TEST_FILES='tests/test_orbit.py' REQUIRES_PYNBODY=true REQUIRES_ASTROPY=true
     - TEST_FILES='tests/test_evolveddiskdf.py'
     - TEST_FILES='tests/test_diskdf.py'
