--- a/.travis.yml
+++ b/.travis.yml
@@ -70,7 +70,7 @@ install:
  - if [[ $TEST_FILES != 'tests/test_evolveddiskdf.py' ]]; then cd galpy/actionAngle_src/actionAngleTorus_c_ext/torus; fi
  - if [[ $TEST_FILES != 'tests/test_evolveddiskdf.py' ]]; then git checkout galpy; fi
  - if [[ $TEST_FILES != 'tests/test_evolveddiskdf.py' ]]; then cd -; fi
- - if $REQUIRES_ASTROPY; then pip install astropy; fi
+ - if $REQUIRES_ASTROPY; then conda install astropy; fi
  - python setup.py build_ext --coverage --single_ext --inplace
  - python setup.py develop --single_ext
 script:
