--- a/.travis.yml
+++ b/.travis.yml
@@ -73,6 +73,8 @@ install:
  - if $REQUIRES_ASTROPY; then conda install astropy; fi
  - python setup.py build_ext --coverage --single_ext --inplace
  - python setup.py develop --single_ext
+# Following tests that we can start from an incomplete configuration file
+ - if [[ $TEST_FILES == 'tests/test_evolveddiskdf.py' ]]; then echo -e '[normalization]\n ro = 8.' > cat > $HOME/.galpyrc; fi
 script:
 # only wait longer for orbit integrations
  - if [[ $TEST_FILES == 'tests/test_orbit.py' ]]; then travis_wait 40 pytest -v $TEST_FILES --cov galpy --cov-config .coveragerc_travis --disable-pytest-warnings; else pytest -v $TEST_FILES --cov galpy --cov-config .coveragerc_travis --disable-pytest-warnings; fi
